--- a/data/variants/academic.yaml
+++ b/data/variants/academic.yaml
@@ -17,8 +17,9 @@ sections:
 formatting:
   publication_style: "academic"
   show_all_authors: false
+  show_all_authors: false
   include_paper_links: true
-  
+
 filters:
   publications:
     include_all: true
