--- a/data/variants/short.yaml
+++ b/data/variants/short.yaml
@@ -11,11 +11,9 @@ sections:
 formatting:
   publication_style: "minimal"
   show_all_authors: false
-  bold_name_in_pubs: true
   include_paper_links: false
-  show_supervision_details: false
-  show_teaching_details: false
-  compact_spacing: tru
+  compact_spacing: true
+  hide_details: true
   
 filters:
   publications:
@@ -23,4 +21,8 @@ filters:
     max_entries: 3
     prefer_first_author: true
   experience:
-    include_all: true
+    include_all: false
+    max_entries: 2
+  education:
+    include_all: false
+    max_entries: 2
