feat: anonymize all sample data with fictional characters and venues
- Replace all real names with fictional characters (Alice Wonderland, Bob Builder, etc.)
- Update institutions from real universities to generic names (Research University, Example University)
- Replace real conference names with humorous fictional venues (International Conference on Negligible Research)
- Change all locations to European cities for consistent geographic theming
- Remove any references to real companies, people, or research institutions
- Ensure all sample data is safe for public distribution and templates

--- a/data/personal.yaml
+++ b/data/personal.yaml
@@ -1,11 +1,11 @@
 name:
-  full: "Alex Jordan"
+  full: "Dr. Alice Wonderland"
   variants:
-    - "Alex Jordan"
-    - "A. Jordan"
-    - "Jordan, A."
+    - "Alice Wonderland"
+    - "A. Wonderland"
+    - "Wonderland, A."
 
 contact:
-  email: "alex.jordan@university.edu"
-  website: "https://alexjordan.github.io"
-  location: "Boston, MA, USA"
+  email: "alice.wonderland@university.eu"
+  website: "https://example.com/~alicewonderland"
+  location: "Milan, Italy"
