--- a/data/sections/experience.yaml
+++ b/data/sections/experience.yaml
@@ -1,33 +1,33 @@
 positions:
-  - id: "mit_phd"
+  - id: "university_phd"
     position: "PhD Research Assistant"
-    company: "Massachusetts Institute of Technology"
+    company: "Research University"
     start_date: "2021-09"
     end_date: "present"
-    location: "Cambridge, MA, USA"
+    location: "Milan, Italy"
     details:
-      - "Develop novel deep learning architectures for computer vision applications in autonomous systems"
-      - "Published 6 first-author papers in top-tier conferences (CVPR, ICCV, NeurIPS)"
-      - "Collaborated with industry partners including Tesla and Waymo on real-world deployment"
-      - "Mentored 4 undergraduate researchers and 2 Master's students on computer vision projects"
+      - "Develop novel computational architectures for data processing applications in automated systems"
+      - "Published 6 first-author papers in top-tier conferences and journals"
+      - "Collaborated with industry partners on real-world deployment of computational models"
+      - "Mentored 4 undergraduate researchers and 2 Master's students on computational research projects"
 
-  - id: "google_intern"
+  - id: "tech_intern"
     position: "Research Intern"
-    company: "Google Research"
+    company: "TechCorp AI Research"
     start_date: "2023-06"
     end_date: "2023-09"
-    location: "Mountain View, CA, USA"
+    location: "Amsterdam, Netherlands"
     details:
-      - "Worked on large-scale vision transformer architectures for image understanding"
+      - "Worked on large-scale computational architectures for data understanding"
       - "Developed efficient training techniques reducing compute requirements by 30%"
       - "Contributed to open-source codebase with over 1000 GitHub stars"
 
   - id: "startup_ml"
-    position: "Machine Learning Engineer"
+    position: "Data Systems Engineer"
     company: "VisionTech AI"
     start_date: "2020-01"
     end_date: "2021-08"
-    location: "San Francisco, CA, USA"
+    location: "Munich, Germany"
     details:
       - "Built production ML pipelines processing 10M+ images daily"
       - "Led team of 3 engineers developing real-time object detection systems"
