--- a/data/sections/reviewer.yaml
+++ b/data/sections/reviewer.yaml
@@ -1,15 +1,15 @@
 venues:
-  - venue: "Conference on Computer Vision and Pattern Recognition (CVPR)"
+  - venue: "International Conference on Negligible Research (ICNR)"
     year: 2024
 
-  - venue: "International Conference on Computer Vision (ICCV)"
+  - venue: "Journal of Questionable AI Advances (JQAIA)"
     year: 2023
 
-  - venue: "Neural Information Processing Systems (NeurIPS)"
+  - venue: "Symposium on Pretentious Computing Methods (SPCM)"
     year: 2023
 
-  - venue: "International Conference on Machine Learning (ICML)"
+  - venue: "Workshop on Overly Complex Solutions (WOCS)"
     year: 2022
 
-  - venue: "IEEE Transactions on Pattern Analysis and Machine Intelligence"
+  - venue: "Proceedings of Dubious Research Excellence (PDRE)"
     year: 2024
