--- a/data/sections/teaching.yaml
+++ b/data/sections/teaching.yaml
@@ -1,28 +1,28 @@
 courses:
   - id: "cs229_ta"
-    course: "Machine Learning"
+    course: "Data Processing Methods"
     code: "CS229"
-    institution: "MIT"
+    institution: "Research University"
     role: "Teaching Assistant"
-    semester: "Fall 2023, Spring 2024"
+    semester: "Winter 2023, Summer 2024"
 
   - id: "vision_seminar"
-    course: "Advanced Computer Vision Seminar"
-    code: "6.869"
+    course: "Advanced Data Analysis Seminar"
+    code: "CS869"
     role: "Teaching Assistant"
-    institution: "MIT"
-    semester: "Fall 2022, Fall 2023"
+    institution: "Research University"
+    semester: "Winter 2022, Winter 2023"
 
   - id: "deep_learning_lab"
-    course: "Deep Learning Systems Laboratory"
-    code: "6.S191"
+    course: "Advanced Computing Systems Laboratory"
+    code: "CS691"
     role: "Lab Instructor"
-    institution: "MIT"
-    semester: "Spring 2022, Spring 2023"
+    institution: "Research University"
+    semester: "Summer 2022, Summer 2023"
 
   - id: "undergrad_mentor"
     course: "Undergraduate Research Mentorship Program"
-    code: "6.UAR"
+    code: "RES300"
     role: "Mentor"
-    institution: "MIT"
+    institution: "Research University"
     semester: "2022-2024"
