--- a/data/sections/education.yaml
+++ b/data/sections/education.yaml
@@ -1,30 +1,30 @@
 degrees:
-  - id: "phd_mit"
+  - id: "phd_research_university"
     degree: "Ph.D."
-    field: "Artificial Intelligence"
-    institution: "Massachusetts Institute of Technology"
-    location: "Cambridge, MA, USA"
+    field: "Computational Sciences"
+    institution: "Research University"
+    location: "Madrid, Spain"
     start_date: "2021-09"
     end_date: "present"
     details:
-      - "Research focus: reinforcement learning, multi-agent systems, and robotics"
+      - "Research focus: computational algorithms, distributed systems, and automated processes"
 
-  - id: "msc_stanford"
+  - id: "msc_tech_university"
     degree: "M.Sc."
-    field: "Computer Science"
-    institution: "Stanford University"
-    location: "Stanford, CA, USA"
+    field: "Computational Sciences"
+    institution: "Tech University"
+    location: "Lisbon, Portugal"
     start_date: "2018-09"
     end_date: "2020-06"
     details:
       - "Graduated with distinction, GPA 4.0/4.0; top 2% of class"
 
-  - id: "bsc_oxford"
+  - id: "bsc_state_university"
     degree: "B.Sc."
-    field: "Computer Science and Engineering"
-    institution: "University of Oxford"
-    location: "Oxford, UK"
+    field: "Computational Sciences and Engineering"
+    institution: "State University"
+    location: "Paris, France"
     start_date: "2015-10"
     end_date: "2018-06"
     details:
-      - "Final grade: First-Class Honours"
+      - "Final grade: Summa Cum Laude"
