--- a/data/sections/talks.yaml
+++ b/data/sections/talks.yaml
@@ -1,25 +1,25 @@
 presentations:
   - title: "Efficient Vision Transformers for Edge Computing"
-    event: "MIT CSAIL Student Seminar"
+    event: "Research University AI Seminar"
     date: "2024-03"
-    location: "Cambridge, MA, USA"
+    location: "Berlin, Germany"
 
   - title: "Adversarial Robustness in Deep Learning: Theory and Practice"
-    event: "Google Research AI Seminar"
+    event: "TechCorp AI Research Seminar"
     date: "2023-08"
-    location: "Mountain View, CA, USA"
+    location: "Amsterdam, Netherlands"
 
   - title: "Self-Supervised Learning for Computer Vision"
-    event: "Stanford AI Lab Colloquium"
+    event: "Tech University AI Lab Colloquium"
     date: "2023-05"
-    location: "Stanford, CA, USA"
+    location: "Munich, Germany"
 
-  - title: "Neural Architecture Search for Mobile Applications"
-    event: "Conference on Computer Vision and Pattern Recognition (CVPR) - Poster Session"
+  - title: "Automated System Design for Mobile Applications"
+    event: "Conference on Marginally Useful Algorithms (CMUA) - Poster Session"
     date: "2022-06"
-    location: "New Orleans, LA, USA"
+    location: "Paris, France"
 
-  - title: "Introduction to Deep Learning for Computer Vision"
-    event: "Berkeley AI Research (BAIR) Workshop"
+  - title: "Introduction to Advanced Data Processing"
+    event: "State University Advanced Research Workshop"
     date: "2021-11"
-    location: "Berkeley, CA, USA"
+    location: "Vienna, Austria"
