docs: comprehensive README update and project configuration
- Complete project documentation with installation and usage guides
- Architecture overview and development workflow instructions
- Updated .gitignore for proper Python/Typst project structure
- Added variant configuration files for academic/industry/short CVs
- Clear examples and troubleshooting documentation

--- a/data/variants/academic.yaml
+++ b/data/variants/academic.yaml
@@ -20,8 +20,4 @@ formatting:
   show_all_authors: false
   include_paper_links: true
 
-filters:
-  publications:
-    include_all: true
-  experience:
-    include_all: true
+# No filtering needed - publications use variant flags
